<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DairyManager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_title">Login Screen</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loginTitle">Dairy Manager</string>
    <string name="loginSubtitle">Automantion system for dairies</string>
</resources>