<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <ScrollView
        android:id="@+id/loginScoller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:stretchColumns="0,1" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:gravity="center"
                        android:paddingBottom="5dip"
                        android:text="@string/loginTitle"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold"
                        android:typeface="serif" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:text="@string/loginSubtitle"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp" >
                </TableRow>
                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/username"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/userName"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/password"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:ems="10"
                        android:hint=""
                        android:inputType="textPassword" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp" >

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/login" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>